manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  name: hello-world-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: registry-dev.bpo-hq.com/library/hello-world:1.1.0
          ports:
            - containerPort: 8080
